fix: spacing in header

--- a/assets/css/partials/_header.scss
+++ b/assets/css/partials/_header.scss
@@ -8,6 +8,7 @@
   }
   .ant-dropdown-link {
     color: #fff;
+    margin: 0px 6px;
   }
 
   .search-bar {
@@ -107,6 +108,7 @@ header {
   padding: 0px 20px;
   font-size: 13px;
   height: 40px;
+  margin: 0px 8px;
   color: #fff !important;
   .plus_icon {
     margin-right: 0px;
